--- a/src/main/resources/com/example/prueba/hello-view.fxml
+++ b/src/main/resources/com/example/prueba/hello-view.fxml
@@ -7,89 +7,133 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="757.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <GridPane fx:id="gpTopPanel" layoutY="-1.0" prefHeight="95.0" prefWidth="757.0" style="-fx-background-color: #298b98;">
-        <columnConstraints>
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      <AnchorPane fx:id="paneTop" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fx:id="ivPersona" fitHeight="180.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@usuario.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="ivLibros" fitHeight="90.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@libros.png" />
-               </image></ImageView>
-            <ImageView fx:id="ivCogerLibro" fitHeight="150.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@libro.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="ivDejarLibro" fitHeight="150.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@libro_reves.png" />
-               </image>
-            </ImageView>
-            <ImageView fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@cerrar-sesion.png" />
-               </image>
-            </ImageView>
+            <GridPane fx:id="gpTopPanel" prefHeight="95.0" prefWidth="757.0" style="-fx-background-color: #298b98;">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fx:id="ivPersona" fitHeight="180.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@usuario.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="ivLibros" fitHeight="90.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@libros.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="ivCogerLibro" fitHeight="150.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@libro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="ivDejarLibro" fitHeight="150.0" fitWidth="85.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@libro_reves.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@cerrar-sesion.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
          </children>
-      </GridPane>
-      <GridPane fx:id="ivbottomPanel" layoutY="417.0" prefHeight="95.0" prefWidth="757.0" style="-fx-background-color: #298b98;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      </AnchorPane>
+      <AnchorPane fx:id="paneCenter" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="95.0">
          <children>
-            <ImageView fx:id="ivTick" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="RIGHT">
-               <image>
-                  <Image url="@checked.png" />
-               </image>
-            </ImageView>
-            <ImageView fx:id="ivCross" fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-               <image>
-                  <Image url="@cross.png" />
-               </image>
-            </ImageView>
+            <GridPane fx:id="gpInfo" prefHeight="325.0" prefWidth="757.0" style="-fx-background-color: #41af97;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="128.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="629.0" minWidth="10.0" prefWidth="629.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Code" GridPane.halignment="CENTER" />
+                  <TextField fx:id="tfName" GridPane.columnIndex="1" />
+                  <TextField fx:id="tfFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="First Name" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                  <Label text="Last Name" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                  <TextField fx:id="tfLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="BirthDate" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                  <DatePicker fx:id="dpBirthday" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </GridPane>
          </children>
-      </GridPane>
-      <GridPane fx:id="gpInfo" layoutY="94.0" prefHeight="325.0" prefWidth="757.0" style="-fx-background-color: #41af97;">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="128.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="629.0" minWidth="10.0" prefWidth="629.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+      </AnchorPane>
+      <AnchorPane fx:id="paneBottom1" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="420.0">
          <children>
-            <Label text="Code" GridPane.halignment="CENTER" />
-            <TextField fx:id="tfName" GridPane.columnIndex="1" />
-            <TextField fx:id="tfFirstName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Label text="First Name" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-            <Label text="Last Name" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-            <TextField fx:id="tfLastName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-            <Label text="BirthDate" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-            <DatePicker fx:id="dpBirthday" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <GridPane fx:id="ivbottomPanel" prefHeight="95.0" prefWidth="757.0" style="-fx-background-color: #298b98;">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fx:id="ivTick" fitHeight="150.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@checked.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fx:id="ivCross" fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@cross.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </GridPane>
          </children>
-         <padding>
-            <Insets left="10.0" right="10.0" />
-         </padding>
-      </GridPane>
+      </AnchorPane>
+      <AnchorPane fx:id="paneBottom2" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="420.0">
+         <children>
+            <GridPane prefHeight="95.0" prefWidth="757.0">
+              <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@lupa.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@mas-simbolo-negro.png" />
+                     </image>
+                  </ImageView>
+                  <ImageView fitHeight="150.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@lapiz.png" />
+                     </image></ImageView>
+               </children>
+            </GridPane>
+         </children>
+      </AnchorPane>
    </children>
 </AnchorPane>
