--- a/src/main/resources/com/example/prueba/hello-view.fxml
+++ b/src/main/resources/com/example/prueba/hello-view.fxml
@@ -21,7 +21,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <ImageView fx:id="ivPersona" fitHeight="180.0" fitWidth="190.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER">
+                  <ImageView fx:id="ivPersona" fitHeight="180.0" fitWidth="190.0" onMouseClicked="#onIvPersonaClick" pickOnBounds="true" preserveRatio="true" GridPane.halignment="CENTER">
                      <image>
                         <Image url="@usuario.png" />
                      </image>
@@ -52,7 +52,7 @@
       </AnchorPane>
       <AnchorPane fx:id="paneCenter" prefHeight="200.0" prefWidth="200.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="95.0">
          <children>
-            <GridPane fx:id="gpInfo" prefHeight="325.0" prefWidth="757.0" style="-fx-background-color: #41af97;">
+            <GridPane fx:id="userDataPane" prefHeight="325.0" prefWidth="757.0" style="-fx-background-color: #41af97;">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="373.0" minWidth="10.0" prefWidth="128.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="629.0" minWidth="10.0" prefWidth="629.0" />
@@ -76,6 +76,34 @@
                <padding>
                   <Insets left="10.0" right="10.0" />
                </padding>
+            </GridPane>
+            <GridPane prefHeight="325.0" prefWidth="757.0" style="-fx-background-color: #41af97;">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="372.0" minWidth="10.0" prefWidth="197.2" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="543.0" minWidth="10.0" prefWidth="480.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="543.0" minWidth="10.0" prefWidth="141.20000000000005" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <ImageView fitHeight="150.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER">
+                     <image>
+                        <Image url="@lupa.png" />
+                     </image></ImageView>
+                  <TextField promptText="Type the user code" GridPane.columnIndex="1" />
+                  <TextField opacity="0.5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField promptText="Type the ISBN" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField opacity="0.5" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <ImageView fitHeight="150.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                     <image>
+                        <Image url="@lupa.png" />
+                     </image>
+                  </ImageView>
+               </children>
             </GridPane>
          </children>
       </AnchorPane>
@@ -103,10 +131,6 @@
                   </ImageView>
                </children>
             </GridPane>
-         </children>
-      </AnchorPane>
-      <AnchorPane fx:id="paneBottom2" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="420.0">
-         <children>
             <GridPane prefHeight="95.0" prefWidth="757.0">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
